tests/too_many_ending_braces.expected
File: too_many_ending_braces.tex

Error on line 4: Number of curly braces near \date April 2018} does not match.
