tests/too_many_ending_braces.tex
\documentclass{article}

\begin{document}
\date April 2018}
\end{document}
